--- a/frontend/src/Styles/App.css
+++ b/frontend/src/Styles/App.css
@@ -1,7 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&family=Roboto:wght@400;500;700&display=swap");
+
+* {
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
 body {
+  margin: 0;
+  padding: 0;
   background-color: #201c1c;
   display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
